--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -30,6 +30,8 @@
          <% end %>
         <% end %>
        </td>
+       
+        <td>コメント数:<%= book.book_comments.count %></td>
         
       </tr>
       
