--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -31,13 +31,55 @@
         <% end %>
        </td>
           
+          <td>コメント数:<%= @book.book_comments.count %></td
           
           <% if @book.user_id == current_user.id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
         　<% end %>
+        
         </tr>
       </table>
+      
+      <% if @book_comment.errors.any? %>
+  <div class="alert alert-warning">
+    <h3><%= @book_comment.errors.count %>errors prohibited this obj from being saved:</h3>
+    <ul>
+      <% @book_comment.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+  <%= form_for [@book, @book_comment] do |f| %>
+    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+    <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+  <% end %>
+
+ <table class="table table-striped">
+  <h3>コメント一覧</h3>
+  <% @book_comments.each do |book_comment| %>
+    <thead>
+      <tr>
+        <th>名前</th>
+        <th>コメント</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><%= book_comment.user.name %></td>
+        <td><%= book_comment.comment %></td>
+        <% if user_signed_in? && current_user.id == book_comment.user_id %>
+         <td><%= link_to 'Destroy', book_book_comment_path(@book.id, book_comment.id), method: :delete %></td>
+      </tr>
+      <% end %>
+   </tbody>
+  <% end %>
+ </table>
+
+      
     </div>
   </div>
 </div>
