--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
          <% end %>
          <% else %>
           <%= link_to book_favorites_path(@book.id), method: :post do %>
-          <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+          <i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
           <%= @book.favorites.count %>
          <% end %>
         <% end %>
