--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,28 @@
 	  <th>introduction</th>
 	  <th><%= @user.introduction %></th>
   </tr>
+    <% @user ||= current_user %>
+			<th>follows</th>
+			<th>
+			    <strong id="follower" class="stat">
+			      <%= @user.follower.count %>
+			    </strong>
+			  </a>
+			</th>
+  <tr>
+    <tr>
+			<% @user ||= current_user %>
+			<th>followers</th>
+			 <th>
+			    <strong id="followed" class="stat">
+			      <%= @user.followed.count %>
+			    </strong>
+			  </a>
+			</th>
+		</tr>
+    
+    
+  </tr>
 </table>
 
 <div class='row'>
