--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -16,9 +16,9 @@
 				<td>
 				  <% unless current_user == user %>
             <% if current_user.following?(user) %>
-            <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+            <%= link_to 'フォロー外す', relationship_path(user.id), method: :delete %>
             <% else %>
-            <%= link_to 'フォローする', follow_path(user.id), method: :POST %>
+            <%= link_to 'フォローする', relationships_path(user.id), method: :POST %>
             <% end %>
             <% end %>
 				</td>
