--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -16,25 +16,11 @@
 				<tbody>
 					<% @users.each do |user| %>
 					<tr>
-						<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
-						<td><%= user.name%></td>
-						<td><span>フォロー数：</span><%= user.follower.count %></td>
-						<td><span>フォロワー数：</span><%= user.followed.count %></td>
-						<td>
-							<% unless current_user == user %>
-							  <% if current_user.following?(user) %>
-							    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
-							      <%= hidden_field_tag :follow_id, user.id %>
-							      <%= f.submit 'フォロー消す', class: 'btn btn-sm btn-default' %>
-							    <% end %>
-							  <% else %>
-							    <%= form_for(current_user.relationships.build) do |f| %>
-							      <%= hidden_field_tag :follow_id, user.id %>
-							      <%= f.submit 'フォローする', class: 'btn btn-sm btn-info' %>
-							    <% end %>
-							  <% end %>
-							<% end %>
-						</td>
+						<td><%= attachment_image_tag(@user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
+						<td><%= @user.name%></td>
+						<td><span>フォロー数：</span><%= @user.follower.count %></td>
+						<td><span>フォロワー数：</span><%= @user.followed.count %></td>
+						
 						<td><%= link_to "Show", user_path(user.id), class: "user_#{user.id}" %></td>
 					</tr>
 					<% end %>
