--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'search/search_form' %>
       <main>
         <%= yield %>
         <p id="notice"><%= notice %></p>
