--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -18,7 +18,7 @@
             <% if current_user.following?(user) %>
             <%= link_to 'フォロー外す', relationship_path(user.id), method: :delete %>
             <% else %>
-            <%= link_to 'フォローする', relationships_path(user.id), method: :POST %>
+            <%= link_to 'フォローする', relationships_path(user_id: user.id), method: :POST %>
             <% end %>
             <% end %>
 				</td>
