--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -33,5 +33,13 @@
 </table>
 
 <div class='row'>
-  <%= link_to '',edit_user_path(@user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{current_user.id}" %>
+  <% if current_user != user %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォロー外す", relationship_path(user.id), method: :delete, class: "btn btn-info" %>
+    <% else %>
+      <%= link_to "フォローする", relationships_path(user_id: user.id), method: :post, class: "btn btn-success" %>
+    <% end %>
+  <% else %>
+    <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <% end %>
 </div>
