--- a/app/views/users/show_follower.html.erb
+++ b/app/views/users/show_follower.html.erb
@@ -21,7 +21,7 @@
 						<td><span>フォロー数：</span><%= @user.follower.count %></td>
 						<td><span>フォロワー数：</span><%= @user.followed.count %></td>
 						
-						<td><%= link_to "Show", user_path(user.id), class: "user_#{user.id}" %></td>
+						<td><%= link_to "Show", users_path(user.id), class: "user_#{user.id}" %></td>
 					</tr>
 					<% end %>
 				</tbody>
