--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,28 +19,28 @@
           <td><%= @book.body %></td>
           <td>
         <% if @book.favorited_by?(current_user) %>
-          <%= link_to book_favorites_path(@book.id), method: :delete do %>
+          <%= link_to book_favorites_path(@book.id), method: :delete, remote: true do %>
           <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
           <%= @book.favorites.count %>
          <% end %>
          <% else %>
-          <%= link_to book_favorites_path(@book.id), method: :post do %>
+          <%= link_to book_favorites_path(@book.id), method: :post, remote: true do %>
           <i class="fa fa-heart" aria-hidden="true" style="color: blue;"></i>
           <%= @book.favorites.count %>
          <% end %>
         <% end %>
        </td>
-          
+
           <td>コメント数:<%= @book.book_comments.count %></td
-          
+
           <% if @book.user_id == current_user.id %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
         　<% end %>
-        
+
         </tr>
       </table>
-      
+
       <% if @book_comment.errors.any? %>
   <div class="alert alert-warning">
     <h3><%= @book_comment.errors.count %>errors prohibited this obj from being saved:</h3>
@@ -52,10 +52,10 @@
   </div>
 <% end %>
 
-  <%= form_for [@book, @book_comment] do |f| %>
-    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-    <%= f.submit "送信", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-  <% end %>
+  <%= form_with model: [@book, @book_comment] do |form| %>
+  <%= form.text_area :comment, rows:'5', class: "form-control" %>
+	<%= form.submit "送信", class: "btn btn-primary d-flex align-items-end" %>
+	<% end %>
 
  <table class="table table-striped">
   <h3>コメント一覧</h3>
@@ -72,14 +72,14 @@
         <td><%= book_comment.user.name %></td>
         <td><%= book_comment.comment %></td>
         <% if user_signed_in? && current_user.id == book_comment.user_id %>
-         <td><%= link_to 'Destroy', book_book_comment_path(@book.id, book_comment.id), method: :delete %></td>
+        <td><%= link_to 'Destroy', book_book_comment_path(@book.id, book_comment.id), method: :delete, remote: true %></td>
       </tr>
       <% end %>
    </tbody>
   <% end %>
  </table>
 
-      
+
     </div>
   </div>
 </div>
